# MyWorkoutAssistant

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLEAN_CODE_REFACTOR_PLAN.md  E2E_TESTING_GUIDE.md  PRODUCTION_RELEASE_PLAN.md  WORKOUT_E2E_COVERAGE.md  build.gradle.kts  dump.txt  gradle.properties  keystore.properties.example  proguard-android-test.pro  pyproject.toml  settings.gradle.kts  version.properties  workout_generator.py
app/: build.gradle.kts
mobile/: build.gradle.kts  version.properties.mobile
scripts/: merge_backup_histories.py  run_cross_device_alarm_e2e.ps1  run_cross_device_open_phone_app_e2e.ps1  run_cross_device_resume_discard_e2e.ps1  run_cross_device_sync_e2e.ps1  run_mobile_startup_restore_e2e.ps1  run_wear_e2e.ps1  run_wear_e2e.sh  run_wear_page_exercises_scroll_benchmark.ps1  setup_workout_history_mcp.ps1
shared/: build.gradle.kts  proguard-rules.pro
tests/: test_workout_generator_calibration_optional.py  test_workout_generator_conversation_sessions.py  test_workout_generator_plan_authority.py  test_workout_generator_weight_choices.py  test_workout_history_mcp.py
wearos/: build.gradle.kts  version.properties.wear
workout_generator_pkg/: __init__.py  api_client.py  cli.py  constants.py  conversation_meta.py  conversation_store.py  deps.py  domain_ops.py  exercise_contracts.py  generation_pipeline.py  interactive_shell.py  json_patching.py  logging_ui.py  main.py  paths.py  plan_contract.py  progress.py  progress_migration.py  stage_prompts.py
workout_history_mcp/: README.md  __init__.py  exporters.py  loader.py  (+2 more)
(+905 files in other folders)
