[project]
name = "myworkoutassistant-tools"
version = "0.1.0"
description = "Python tooling for MyWorkoutAssistant workout history exports."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["workout_history_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
